--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Flavio Feth | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Flavio Feth | WDD 130</h1>
+        <img src="images/profile.jpg" alt="I am Flavio Feth" width=200>
+        <p>My name is Flavio Feth. I live in a city called Brossard, in Montreal Metropolitan Area, Quebec, Canada.</p>
+        <p>I'm married with Edilene and we have six children and 5 grandchildren.</p>
+        <p>I was born in Brazil and immigrated to Canada in 2008.</p>
+        <p>I like reading, watching movies and hiking. My favorite genres for movies and books are biographies and
+            science fiction. Particularly, Isaac Asimov is my favorite writer by far.</p>
+    </main>
+    <footer>
+        <p>©️2025 🍁 Flavio Feth 🍁 Quebec, Canada</p>
+    </footer>
+
 </body>
+
 </html>
