W02 - MAJ index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flavio Feth | WDD 130</title>
+    <meta name="description" content="This a site created by Flavio Feth, in order to complete the training based on the course WDD130-Web Fundamentals, from BYU-Idaho">
+    <meta name="author" content="Flavio Feth">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -23,10 +26,15 @@
         <p>I like reading, watching movies and hiking. My favorite genres for movies and books are biographies and
             science fiction. Particularly, Isaac Asimov is my favorite writer by far.</p>
     </main>
+    <aside>
+        <h2>Quebec, Canada</h2>
+        <img src="images/quebec.jpg" alt="Quebec City in the winter">
+        <p>Quebec is the largest Canadian province in territory and the second in population, behind the Province of Ontario. French is the official language in Quebec.</p>
+    </aside>
     <footer>
         <p>©️2025 🍁 Flavio Feth 🍁 Quebec, Canada</p>
     </footer>
 
 </body>
 
-</html>
+</html
