update index 19 nov

--- a/index.html
+++ b/index.html
@@ -19,26 +19,28 @@
             <a href="https://www.facebook.com" target="_blank">Facebook Page</a>
         </nav>
     </header>
-    <main>
-        <h1>Flavio Feth | WDD 130</h1>
-        <img src="images/profile.jpg" alt="I am Flavio Feth" width=200>
-        <p>My name is Flavio Feth. I live in a city called Brossard, in Montreal Metropolitan Area, Quebec, Canada.</p>
-        <p>I'm married with Edilene and we have six children and 5 grandchildren.</p>
-        <p>I was born in Brazil and immigrated to Canada in 2008.</p>
-        <p>I like reading, watching movies and hiking. My favorite genres for movies and books are biographies and
-            science fiction. Particularly, Isaac Asimov is my favorite writer by far.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quas praesentium excepturi, quasi laborum laboriosam inventore eius iusto sed. Exercitationem similique maiores inventore veritatis, veniam velit! Itaque inventore molestias facere!</p>
-        <ul class="box indent">
-            <li><a href="https://newsroom.churchofjesuschrist.org/article/s%C3%A3o-paulo-brazil-temple" target="_blank">Sao Paulo Brazil Temple</a></li>
-            <li><a href="https://newsroom.churchofjesuschrist.org/article/cardston-alberta-temple" target="_blank">Cardston Alberta Canada Temple</a></li>
-            <li><a href="https://newsroom.churchofjesuschrist.org/article/salt-lake-temple" target="_blank">Salt Lake Utah Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Quebec, Canada</h2>
-        <img src="images/quebec.jpg" alt="Quebec City in the winter">
-        <p>Quebec is the largest Canadian province in territory and the second in population, behind the Province of Ontario. French is the official language in Quebec.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Flavio Feth | WDD 130</h1>
+            <img src="images/profile.jpg" alt="I am Flavio Feth" width=200>
+            <p>My name is Flavio Feth. I live in a city called Brossard, in Montreal Metropolitan Area, Quebec, Canada.</p>
+            <p>I'm married with Edilene and we have six children and 5 grandchildren.</p>
+            <p>I was born in Brazil and immigrated to Canada in 2008.</p>
+            <p>I like reading, watching movies and hiking. My favorite genres for movies and books are biographies and
+                science fiction. Particularly, Isaac Asimov is my favorite writer by far.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quas praesentium excepturi, quasi laborum laboriosam inventore eius iusto sed. Exercitationem similique maiores inventore veritatis, veniam velit! Itaque inventore molestias facere!</p>
+            <ul class="box indent">
+                <li><a href="https://newsroom.churchofjesuschrist.org/article/s%C3%A3o-paulo-brazil-temple" target="_blank">Sao Paulo Brazil Temple</a></li>
+                <li><a href="https://newsroom.churchofjesuschrist.org/article/cardston-alberta-temple" target="_blank">Cardston Alberta Canada Temple</a></li>
+                <li><a href="https://newsroom.churchofjesuschrist.org/article/salt-lake-temple" target="_blank">Salt Lake Utah Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Quebec, Canada</h2>
+            <img src="images/quebec.jpg" alt="Quebec City in the winter">
+            <p>Quebec is the largest Canadian province in territory and the second in population, behind the Province of Ontario. French is the official language in Quebec.</p>
+        </aside>
+    </div>
     <footer>
         <p>©️2025 🍁 Flavio Feth 🍁 Quebec, Canada</p>
     </footer>
