--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,6 +37,28 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div>
+                <figure>
+                    <img src="images/await_1.jpg" alt="Black Rock point">
+                    <figcaption>Black Rock point</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/await_2.jpg" alt="Bluet River">
+                    <figcaption>Bluet River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/await_3.jpg" alt="Rafting">
+                    <figcaption>Facing the challenge</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/await_4.jpg" alt="Rafting">
+                    <figcaption>Team work</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/await_5.jpg" alt="Final portion of the river">
+                    <figcaption>Bonanza</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
