--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,7 +39,7 @@
             <h2>Adventure Awaits You!</h2>
             <div>
                 <figure>
-                    <img src="images/Await_1.jpg" alt="Black Rock point">
+                    <img src="images/await_1.jpg" alt="Black Rock point">
                     <figcaption>Black Rock point</figcaption>
                 </figure>
                 <figure>
