--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,12 +34,13 @@
         <section>     
             <h2>History</h2>
             <p>In 1966, a group of friends decided to invest time and money in their passion: trips on the rapids</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae animi illum unde, possimus quidem quas officiis totam quos numquam voluptas molestiae harum cumque tenetur officia reiciendis provident. Eaque, itaque deleniti! Beatae similique, totam incidunt fugit tenetur provident sed ut. Nesciunt rem accusantium eveniet voluptatem libero est nulla placeat excepturi laborum. </p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
             <div>
                 <figure>
-                    <img src="images/await_1.jpg" alt="Black Rock point">
+                    <img src="images/1await_1.jpg" alt="Black Rock point">
                     <figcaption>Black Rock point</figcaption>
                 </figure>
                 <figure>
@@ -47,11 +48,11 @@
                     <figcaption>Bluet River</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/await_3.jpg" alt="Rafting">
+                    <img src="images/await_3.jpg" alt="People in a boat facing the river challenges ">
                     <figcaption>Facing the challenge</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/await_4.jpg" alt="Rafting">
+                    <img src="images/await_4.jpg" alt="Rafting with several people in a boat">
                     <figcaption>Team work</figcaption>
                 </figure>
                 <figure>
